add some details

--- a/hello-world.html
+++ b/hello-world.html
@@ -4,6 +4,6 @@
 <TITLE>Hello World in HTML</TITLE>
 </HEAD>
 <BODY>
-<CENTER><H1>Hello World!</H1></CENTER>
+<CENTER><H1>Hello World! A pretty worlds</H1></CENTER>
 </BODY>
 </HTML>
